# ABC_scripts

./: .beamignore  .gitignore  Dockerfile  README.md  app.py  beam_app.py  config_git.sh  config_pod.sh  fine-tune.sh  pyproject.toml  requirements.txt
copy_to_pod/: config.yml  fine-tune.md  fine-tune.sh
scripts/: axolotl_config.yaml  b_download_chunk.sh  combine_jsonls.py  download_chunk.py  download_chunk.sh  download_dataset.sh  download_dataset_chunk.py  download_dataset_old.sh  downsize_data.py  fine-tune.py  format_chunk.py  process_multiple.sh  test_script.sh
