[tool.poetry]
package-mode = false
name = "abc-scripts"
version = "0.1.0"
description = "Scripts for finetuning LLMs on ABC CAD dataset."
authors = ["Rodney Lafuente Mercado <rodneyslafuente@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
pypika = "^0.48.9"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
